# Haskell-dlist-parser

./: .gen_ghci_script  .gitignore  @dump_file_list.txt  CHANGELOG.md  LICENSE  README.md  TokenParser.dump-hi  bak.types.tsv  base-types.txt  cabal.project  cleanDB.sh  diglog.txt  dlist-parser.cabal  dlist_log.txt  dump_file_list.txt  functions.txt  functions1.txt  ghci_cmd.txt  inferDB5.json  log.txt  log2.txt  log4.txt  loga.txt  logdlist.txt  main.dump-parsed-ast  main.dump-tc-ast  main.hs  samp.txt  samp2.txt  testAllFile.sh  testInfer.sh  testlog.txt  tmp.txt  tmplog.txt  typeDB.sh  typeDB.sqlite  typeDB.tsv  typeDBapi.tsv  typeapi.tsv  types.tsv  (+3 more)
app/: Lexer.hs  Main.hs  MainV.hs  MyTrace.hs
app.Case/: Lexer.hs  Main.hs
app.err/: Expr.hs  Main.hs
app.notorg/: Expr.hs
app.org/: Expr.hs  Lexer.hs  Main.hs
app.分割前/: Expr.hs  Lexer.hs  Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
hi-dumps/: build_x86_64-windows_ghc-9.2.1_dlist-parser-0.1.0.0_build_AST_Module.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_AST_BinOp.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_AST_Decl.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_AST_Expr.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_AST_Module.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_AST_Pattern.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_AST_Type.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Decl_DeclParserCore.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Decl_DeclParser_Data.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Decl_DeclParser_Fun.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Decl_DeclParser_Import.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Decl_DeclParser_Module.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Decl_DeclParser_Type.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Decl_DeclParser_Util.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Layout_LayoutTransform.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Lexer_LayoutLexer.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Lexer_Lexer.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Lexer_SimpleLexer.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Lexer_Token.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Core_Combinator.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Core_Parser.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Core_TokenParser.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Expr_CaseParserCore.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Expr_DoParserCore.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Expr_ExprCore.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Expr_ExprExtensions.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Expr_ExprParser.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Expr_ListParserCore.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Expr_PatternParser.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_SQL_SQLParser.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_Parser_Type_TypeParser.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Error.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer_Core.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer_Expr.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer_Expr_ExprApp.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer_Expr_ExprBinOp.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer_Expr_ExprCase.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer_Expr_ExprDispatch.hi.dump-hi  build_x86_64-windows_ghc-9.6.7_dlist-parser-0.1.0.0_build_TypeInference_Infer_Expr_ExprDo.hi.dump-hi  (+767 more)
src/: MyModule.dump-types  MyModule.hi  MyModule.hs  extract-types.hs  main.hs  mainDecl.hs  mainExpr.hs  mainInfer.hs  mainJson.hs  mainLang.hs  readTypes.hs  testDB.hs  testInfer.hs
src - コピー/: main.hs
src - コピー/AST/: Expr.hs  Program.hs  Type.hs
src - コピー/Layout/: LayoutTransform.hs
src - コピー/Lexer/: Lexer.hs
src - コピー/TypeInference/: Error.hs  Pretty.hs  SQLInfer.hs  Subst.hs  TypeEnv.hs  Unify.hs
src - コピー/Utils/: SQLUtils.hs
src.Case/Expr/: AST.hs  Combinator.hs  ExprParser.hs  Parser.hs  (+3 more)
src.型推論HMの途中/: main.hs
test/: all_result.txt  all_result_expr_kako.txt  all_result_org.txt  all_result_org3.txt  all_result_org4.txt  dlist_errlog.txt  dlist_log.txt  dlist_tmp.txt  logdlist.txt  sample.hi  sample.hs  sample1.hs  sample1bak.hs  sample2.hs  sample3.hs  sample4.hs  sample5.hs  sample6.hs  sample7.hs
tool/: all.txt  allpkgtype.sh  browse_all.txt  browse_all2.txt  browse_all_org.txt  browse_fun.txt  clean_api.py  clean_tsv.py  cls.txt  corectAPI.sh  dat.txt  extract_exported_types.py  fun.txt  get_api.py  ins.txt  sqlite_all.py  sqlite_api.py  sqlite_class.py  sqlite_function.py  sqlite_init.py  sqlite_instance.py  sqlite_loader.sh  typ.txt  typeDB.sqlite
tool/dumpapi/: CHANGELOG.md  LICENSE  Main.hs  cabal.project  dumpapi.cabal
tool/dumpapi/app/: DumpAPI.hs
tool/dumpapi/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
(+276 files in other folders)
