cabal-version:   3.0
name:            dlist-parser
version:         0.1.0.0
license:         NONE
author:          Nobu0
maintainer:      nobu0sys@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable myapp
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    text,
                    containers,
                    parser-combinators
  default-language: Haskell2010
  other-modules:
    Lexer.Lexer
    Utils.MyTrace
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
   --  AST.Qualifier
    -- AST.Case
    AST.Module
    -- AST.Stmt
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Decl.DeclParserCore


-- executable test-parser
--  main-is: ParserTestMain.hs
--  hs-source-dirs: test


executable dlist-parser
  import:           warnings
  main-is:          Main.hs
  --cpp-options:      -D ENABLE_TRACE
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    text,
                    containers,
                    parser-combinators
  hs-source-dirs:   app,
                    src
  default-language: Haskell2010
  other-modules:
    Lexer.Lexer
    Utils.MyTrace
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
   --  AST.Qualifier
    -- AST.Case
    AST.Module
    -- AST.Stmt
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser

                      

