cabal-version:   3.0
name:            dlist-parser
version:         0.1.0.0
license:         NONE
author:          Nobu0
maintainer:      nobu0sys@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  exposed-modules:
    TypeInference.Infer
    TypeInference.Infer.Expr
    TypeInference.Infer.Expr.ExprSQL
    TypeInference.Infer.Expr.ExprDo
    TypeInference.Infer.Expr.ExprLet
    TypeInference.Infer.Expr.ExprCase
    TypeInference.Infer.Expr.ExprIf
    TypeInference.Infer.Expr.ExprApp
    TypeInference.Infer.Expr.ExprLiteral
    TypeInference.Infer.Expr.ExprBinOp
    TypeInference.Infer.Expr.ExprDispatch
    TypeInference.Infer.Core
    TypeInference.Infer.Pattern
    TypeInference.SQLInfer
    TypeInference.Subst
    TypeInference.Unify
    TypeInference.TypeEnv
    TypeInference.Type
    TypeInference.Error
    TypeInference.Pretty
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
    AST.Module
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
  hs-source-dirs: src
  build-depends:
      base >=4.14 && <5,
      containers,
      text
  default-language: Haskell2010

executable layout
  main-is: MainV.hs
  hs-source-dirs: app, src
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    text,
                    containers,
                    parser-combinators
  default-language: Haskell2010
  other-modules:
    TypeInference.Infer
    TypeInference.Infer.Expr
    TypeInference.Infer.Expr.ExprSQL
    TypeInference.Infer.Expr.ExprDo
    TypeInference.Infer.Expr.ExprLet
    TypeInference.Infer.Expr.ExprCase
    TypeInference.Infer.Expr.ExprIf
    TypeInference.Infer.Expr.ExprApp
    TypeInference.Infer.Expr.ExprLiteral
    TypeInference.Infer.Expr.ExprBinOp
    TypeInference.Infer.Expr.ExprDispatch
    TypeInference.Infer.Core
    TypeInference.Infer.Pattern
    TypeInference.SQLInfer
    TypeInference.Subst
    TypeInference.Unify
    TypeInference.TypeEnv
    TypeInference.Type
    TypeInference.Error
    TypeInference.Pretty
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
    AST.Module
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Util

executable myapp
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    text,
                    containers,
                    parser-combinators
  default-language: Haskell2010
  other-modules:
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
   --  AST.Qualifier
    -- AST.Case
    AST.Module
    -- AST.Stmt
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Util


-- executable test-parser
--  main-is: ParserTestMain.hs
--  hs-source-dirs: test


executable dlist
  import:           warnings
  main-is:          Main.hs
  --cpp-options:      -D ENABLE_TRACE
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    text,
                    containers,
                    parser-combinators
  hs-source-dirs:   app,
                    src
  default-language: Haskell2010
  other-modules:
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
   --  AST.Qualifier
    -- AST.Case
    AST.Module
    -- AST.Stmt
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Util

executable test1
  -- main-is: Test/TypeInferSQL.hs
  main-is: Test/DeclParserSpec.hs
  hs-source-dirs:
      src
      test
  build-depends:
      base >=4.14 && <5,
      dlist-parser,
      containers,
      text
  default-language: Haskell2010
  other-modules:
    -- Test.DeclParserSpec
    TypeInference.Infer
    TypeInference.SQLInfer
    TypeInference.Subst
    TypeInference.Unify
    TypeInference.TypeEnv
    TypeInference.Type
    TypeInference.Error
    TypeInference.Pretty
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
    AST.Module
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Util


