cabal-version:   3.0
name:            dlist-parser
version:         0.1.0.0
license:         NONE
author:          Nobu0
maintainer:      nobu0sys@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  exposed-modules:
    TypeInference.Infer
    TypeInference.Infer.Expr
    TypeInference.Infer.Expr.ExprSQL
    TypeInference.Infer.Expr.ExprDo
    TypeInference.Infer.Expr.ExprLet
    TypeInference.Infer.Expr.ExprCase
    TypeInference.Infer.Expr.ExprIf
    TypeInference.Infer.Expr.ExprApp
    TypeInference.Infer.Expr.ExprLiteral
    TypeInference.Infer.Expr.ExprBinOp
    TypeInference.Infer.Expr.ExprDispatch
    TypeInference.Infer.Core
    TypeInference.Infer.Pattern
    TypeInference.SQLInfer
    TypeInference.Subst
    TypeInference.Unify
    TypeInference.TypeEnv
    TypeInference.Type
    TypeInference.Error
    TypeInference.Pretty
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
    AST.Module
    AST.BinOp
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
  hs-source-dirs: src
  build-depends:
      base >=4.14 && <5,
      containers,
      mtl >= 2.3 && < 2.4,
      text,
      containers,
      prettyprinter,
      transformers >= 0.5 && < 0.7,
      prettyprinter-ansi-terminal,
      parser-combinators
  default-language: Haskell2010

common shared-settings
  hs-source-dirs: src
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    mtl >= 2.3 && < 2.4,
                    text,
                    containers,
                    prettyprinter,
                    transformers >= 0.5 && < 0.7,
                    prettyprinter-ansi-terminal,
                    parser-combinators
  default-language: Haskell2010
  other-modules:
    TypeInference.Infer
    TypeInference.Infer.Expr
    TypeInference.Infer.Expr.ExprFun
    TypeInference.Infer.Expr.ExprSQL
    TypeInference.Infer.Expr.ExprDo
    TypeInference.Infer.Expr.ExprLet
    TypeInference.Infer.Expr.ExprCase
    TypeInference.Infer.Expr.ExprIf
    TypeInference.Infer.Expr.ExprApp
    TypeInference.Infer.Expr.ExprLiteral
    TypeInference.Infer.Expr.ExprBinOp
    TypeInference.Infer.Expr.ExprDispatch
    TypeInference.Infer.Core
    TypeInference.Infer.Pattern
    TypeInference.SQLInfer
    TypeInference.Subst
    TypeInference.Unify
    TypeInference.TypeEnv
    TypeInference.Type
    TypeInference.Types
    TypeInference.Error
    TypeInference.Pretty
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
    AST.Module
    AST.BinOp
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Data
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Type
    Decl.DeclParser.Util

executable infer
  import: shared-settings
  main-is: MainInfer.hs

executable testinfer
  import: shared-settings
  main-is: testinfer.hs

executable myapp
  main-is: Main.hs
  hs-source-dirs: src
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    mtl >= 2.3 && < 2.4,
                    text,
                    containers,
                    prettyprinter,
                    transformers >= 0.5 && < 0.7,
                    prettyprinter-ansi-terminal,
                    parser-combinators
  default-language: Haskell2010
  other-modules:
    TypeInference.Infer
    TypeInference.Infer.Expr
    TypeInference.Infer.Expr.ExprFun
    TypeInference.Infer.Expr.ExprSQL
    TypeInference.Infer.Expr.ExprDo
    TypeInference.Infer.Expr.ExprLet
    TypeInference.Infer.Expr.ExprCase
    TypeInference.Infer.Expr.ExprIf
    TypeInference.Infer.Expr.ExprApp
    TypeInference.Infer.Expr.ExprLiteral
    TypeInference.Infer.Expr.ExprBinOp
    TypeInference.Infer.Expr.ExprDispatch
    TypeInference.Infer.Core
    TypeInference.Infer.Pattern
    TypeInference.SQLInfer
    TypeInference.Subst
    TypeInference.Unify
    TypeInference.TypeEnv
    TypeInference.Type
    TypeInference.Types
    TypeInference.Error
    TypeInference.Pretty
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
    AST.Module
    AST.BinOp
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Data
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Type
    Decl.DeclParser.Util


-- executable test-parser
--  main-is: ParserTestMain.hs
--  hs-source-dirs: test


executable dlist
  import:           warnings
  main-is:          Main.hs
  --cpp-options:      -D ENABLE_TRACE
  build-depends:    base >=4.7 && <5,
                    -- megaparsec >= 9.0,
                    mtl >= 2.3 && < 2.4,
                    text,
                    containers,
                    prettyprinter,
                    transformers >= 0.5 && < 0.7,
                    prettyprinter-ansi-terminal,
                    parser-combinators
  hs-source-dirs:   app,
                    src
  default-language: Haskell2010
  other-modules:
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
   --  AST.Qualifier
    -- AST.Case
    AST.Module
    AST.BinOp
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Data
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Type
    Decl.DeclParser.Util

executable test1
  -- main-is: Test/TypeInferSQL.hs
  main-is: Test/DeclParserSpec.hs
  hs-source-dirs:
      src
      test
  build-depends:
      base >=4.14 && <5,
      dlist-parser,
      containers,
      mtl >= 2.3 && < 2.4,
      text,
      containers,
      prettyprinter,
      transformers >= 0.5 && < 0.7,
      prettyprinter-ansi-terminal,
      parser-combinators
  default-language: Haskell2010
  other-modules:
    -- Test.DeclParserSpec
    TypeInference.Infer
    TypeInference.SQLInfer
    TypeInference.Subst
    TypeInference.Unify
    TypeInference.TypeEnv
    TypeInference.Type
    TypeInference.Error
    TypeInference.Pretty
    Lexer.Lexer
    Lexer.SimpleLexer
    Lexer.Token
    Lexer.LayoutLexer
    Layout.LayoutTransform
    Utils.MyTrace
    Utils.SQLUtils
    AST.Expr
    AST.Type
    AST.Pattern
    AST.Decl
    AST.Module
    Parser.Type.TypeParser
    Parser.Expr.PatternParser
    Parser.Expr.ExprCore
    Parser.Expr.ExprExtensions
    Parser.Expr.ListParserCore
    Parser.Expr.DoParserCore
    Parser.Expr.CaseParserCore
    Parser.Core.Combinator
    Parser.Core.TokenParser
    Parser.Expr.ExprParser
    Parser.Core.Parser
    Parser.SQL.SQLParser
    Decl.DeclParserCore
    Decl.DeclParser.Fun
    Decl.DeclParser.Data
    Decl.DeclParser.Module
    Decl.DeclParser.Import
    Decl.DeclParser.Util


common shared-lang
  hs-source-dirs: src
  build-depends:    base >=4.7 && <5,
                    megaparsec >= 9.0,
                    mtl >= 2.3 && < 2.4,
                    text,
                    containers,
                    prettyprinter,
                    transformers >= 0.5 && < 0.7,
                    prettyprinter-ansi-terminal,
                    parser-combinators
  default-language: Haskell2010
  other-modules:
    Language.TypeSystem.Utils.MyTrace
    Language.TypeSystem.Topo
    Language.TypeSystem.Class
    Language.TypeSystem.ClassEnv
    Language.TypeSystem.Prelude
    Language.TypeSystem.Pretty
    Language.TypeSystem.Utils.Utils
    Language.TypeSystem.ClassDef
    Language.TypeSystem.Expr
    Language.TypeSystem.Decl
    Language.TypeSystem.DeclDef
    Language.TypeSystem.DeclInstance
    Language.TypeSystem.Env
    Language.TypeSystem.BinOp
    Language.TypeSystem.BaseType
    Language.TypeSystem.TypeDB
    Language.TypeSystem.ParseType
    Language.TypeSystem.Infer
    Language.TypeSystem.Infer.Expr
    Language.TypeSystem.Infer.Decl
    Language.TypeSystem.Infer.Subst
    Language.TypeSystem.Infer.Unify
    --Language.TypeSystem.Infer.Program
    Language.TypeSystem.InferInstances
    Language.TypeSystem.DataEnv
    Language.TypeSystem.Error
    Language.TypeSystem.Syntax
    Language.TypeSystem.EnvInstance
    -- Language.TypeSystem.TypeLikeInstance
    -- Language.TypeSystem.SchemeInstance
    Language.TypeSystem.InferM
    Language.TypeSystem.Generalize
    Language.TypeSystem.EnvInstance
    Language.TypeSystem.Pattern
    Language.TypeSystem.PatternInfer


executable inferD
  import: shared-lang
  main-is: MainDecl.hs

executable inferE
  import: shared-lang
  main-is: MainExpr.hs


executable readType
  import: shared-lang
  main-is: readTypes.hs


executable loadDB
  import: shared-lang
  main-is: testDB.hs


executable filejson
  main-is: extract-types.hs
  --exposed-modules:     MyModule
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       process,
                       aeson,
                       filepath,
                       regex-tdfa,
                       bytestring
  default-language:    Haskell2010
  other-modules:       MyModule


executable json2db
  main-is: mainJson.hs
  --exposed-modules:     MyModule
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       process,
                       parsec,
                       filepath,
                       containers,
                       regex-tdfa,
                       aeson,
                       bytestring
  default-language:    Haskell2010
  other-modules:       
                       Language.Tool.Type
                       Language.Tool.TypeParser
                       Language.TypeSystem.ClassEnv
                       Language.TypeSystem.BaseType
                       Language.TypeSystem.Syntax
                       Language.TypeSystem.BinOp
                       Language.TypeSystem.TypeDB 

  -- Language.Tool.Load
