cabal-version:   3.0
name:            dumpapi
version:         0.1.0.0
license:         NONE
author:          Nobu0
maintainer:      nobu0sys@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall


executable dumpapi
  main-is:             Main.hs
  hs-source-dirs:      .
  build-depends:
    base >=4.14 && <5,
    ghc,
    ghc-paths,
    aeson,
    bytestring,
    containers
  default-language:    Haskell2010
